Chore : 프로젝트 구조 설계

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -114,7 +114,7 @@
     transition: transform 0.2s ease-in-out;
     line-height: 27px;
     z-index: 2;
-    background-image: url('../images/slider-label.png');
+    background-image: url('../images/slider-value.png');
     background-size: 41px 32px;
 }
 
